--- a/index.html
+++ b/index.html
@@ -11,19 +11,51 @@
 </head>
 <body> 
    
-    <section>
+    <section class="top=banner">
         <div class="half-width">
             <h1> Welcome to</h1>
-            <h1><span class="name-highlights">Raiahn's</span> Website</h1>
+            <h1><span class="name-highlights">Raihan's</span> Website</h1>
 
             <h3>New Beginer web devoloper</h3>
             <p>I want to become a web devloper because i want to devlop wonderful website. i started web devlopment.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakes-raihan-aa4ba81a0/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my pic.jpg" alt="">
         </div>
     </section>
 
+  <section class="dream-area" >
+    <div class="half-width" >
+        <img src="images/raihan2.jpg" alt="">
+
+    </div>
+
+    <div class="half-width">
+        <h2> Dream BiG</h2>
+        <h3>Become e big devoloper</h3>
+        <p>Welcome to
+            Raiahn's Website
+            New Beginer web devoloper
+            I want to become a web devloper because i want to devlop wonderful website. i started web devlopment.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/Raihan3744">My Facebook</a>
+
+    </div>
+
+  </section>  
+
+<section class="Experience-area">
+    <div class="half-width">
+        <h2>Full Stack Web Devloper</h2>
+        <h3>2024-Present | Pro Level Web Devloper</h3>
+        <p> Learning web devlopment from 2024 1st january. Did not waste any time  </p>
+    </div>
+
+
+    <div class="half-width">
+
+    </div>
+</section>
 
 
 
