--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
    
     <section class="top=banner">
         <div class="half-width">
-            <h1> Welcome to</h1>
+            <h1 class="wellcome-animation"> Welcome to</h1>
             <h1><span class="name-highlights">Raihan's</span> Website</h1>
 
-            <h3>New Beginer web devoloper</h3>
-            <p>I want to become a web devloper because i want to devlop wonderful website. i started web devlopment.</p>
+            <h3 class="orange-highlights">Web Devoloper</h3>
+            <p>A professional web devloper. Build full-stack wevlopment projects from me. Buiding user friendly, welly designed,Fully Customizable and organized layout.  </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakes-raihan-aa4ba81a0/">HIRE ME</a>
         </div>
         <div class="half-width">
@@ -32,12 +32,9 @@
     </div>
 
     <div class="half-width">
-        <h2> Dream BiG</h2>
-        <h3>Become e big devoloper</h3>
-        <p>Welcome to
-            Raiahn's Website
-            New Beginer web devoloper
-            I want to become a web devloper because i want to devlop wonderful website. i started web devlopment.</p>
+        <h2>About Me</h2>
+        <h3 class="orange-highlights">Don't Say Just Show</h3>
+        <p>Hello,I'm Golam Raihan. I'm from Bangladesh. I live in kushtia. I completed my Bsc From Daffodil Internation University in Computer science and Engineering. I got interest in Web Devlopment from long time. Now i am building various kind of websites and learning new things everyday</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/Raihan3744">My Facebook</a>
 
     </div>
@@ -45,22 +42,33 @@
   </section>  
 
 <section class="Experience-area">
-    <div class="half-width">
-        <h2>Full Stack Web Devloper</h2>
-        <h3>2024-Present | Pro Level Web Devloper</h3>
-        <p> Learning web devlopment from 2024 1st january. Did not waste any time  </p>
+    <h2 id="exp">Experience</h2>
+    <div id="full-stack" class="half-width singel-experience" >
+        <h2 >Full Stack Web Devloper</h2>
+        <h3 class="orange-highlights">2024-Present | Pro Level Web Devloper</h3>
+        <p> Learning web devlopment from 2024 1st january. Did not waste any time. at present i am doing my Web design coure and building my portfolio by watching jhankar mahamud courses.  </p>
     </div>
 
 
-    <div class="half-width">
-
+    <div id="baby-web" class="half-width singel-experience">
+        <h2> Learner</h2>
+        <h3 class="orange-highlights">2024-Present | programing hero</h3>
+        <p>I am a hungry learner. I loved to learn new things everyday. Whenever i got chance to learn new things i grabed it. Web devlopmentis a thing that u alaways have to learn new things for keep up with modern world. So Never stop learning</p>
     </div>
 </section>
 
+<section class="last">
+    <Div>
+        <p id="contact">Contact</p>
+        Email : Rakesraihan37@gmail.com</br>
+        Social Media : <a target="_blank"  href="https://www.facebook.com/Raihan3744/"><img  class="logo" src="images/fb.png" alt=""></a>
+        <a target="_blank"  href="https://www.linkedin.com/in/rakes-raihan-aa4ba81a0/"><img  class="logo" src="images/linked in.png" alt=""></a>
+        <a target="_blank"  href=""><img class="logo" src="images/insta.jpg" alt=""></a>
+        <a target="_blank"  href="https://discord.com/channels/@me"><img class="logo" src="images/discord.png" alt=""></a>
+    </Div>
+</section>
 
-
-
-
+<footer id="footer" >@all credit goes to MD.Golam Raihan</footer>
     
 </body>
 </html>
